Completed All Functionalities

--- a/Backend/static/prov_funct_styles.css
+++ b/Backend/static/prov_funct_styles.css
@@ -3,9 +3,11 @@
 }
 #head {
     text-align: center;
+    text-decoration: underline;
 }
 #but_popup{
     display: inline-block;
+    
 }
 
 #inline {
