--- a/Backend/templates/Provider.html
+++ b/Backend/templates/Provider.html
@@ -39,12 +39,16 @@
 
         <form action="/prov_funct" method='POST'>
             <input type="hidden" name="user_id" value="{{userid}}">
-            <input type="hidden" name="todo" value=2>
+            <input type="hidden" name="todo" value=3>
             <button>Orders in Progress</button>
         </form>
         
+        <form action="/prov_funct" method='POST'>
+            <input type="hidden" name="user_id" value="{{userid}}">
+            <input type="hidden" name="todo" value=4>
+            <button>View completed Orders</button>
+        </form>
         
-        <button>View completed Orders</button>
     </div>
 </body>
 
