--- a/Backend/templates/prov_funct.html
+++ b/Backend/templates/prov_funct.html
@@ -11,7 +11,7 @@
 <body>
 
     {% if funct==1 %}
-    <div id="funct1">
+    <div id="profile">
 
         <h1 id="head">Provider Profile</h1>
         <table align="center" border="1">
@@ -86,7 +86,7 @@
         </div>
         {% endif %}
     </div>
-    <div id="funct2">
+    <div id="requests">
         {% if funct==2 %}
 
 
@@ -129,7 +129,7 @@
             </tbody>
         </table>
         {% if qcreate %}
-            <div id="pop_up">Quote created with the Id {{qid}}</div>
+        <div id="pop_up">Quote created with the Id {{qid}}</div>
         {% endif %}
         <p>Select the request to create a quote and Enter Quote Details</p>
 
@@ -137,19 +137,19 @@
             <input type="hidden" name="user_id" value="{{userid}}">
             <input type="hidden" name="todo" value=8>
 
-            <label >Enter the Request ID to be accepted:</label>
+            <label>Enter the Request ID to be accepted:</label>
             <input type="text" name="rid" required>
 
-            <label >Amount:</label>
+            <label>Amount:</label>
             <input type="text" name="amt" required>
 
             <label>Estimated Delivery time(days):</label>
-            <input type="text" name="days"  required>
+            <input type="text" name="days" required>
 
             <button type="submit" class="button-container">Submit</button>
         </form>
 
-        
+
 
         {% endif %}
 
@@ -159,7 +159,127 @@
         {% endif %}
     </div>
 
+    <div id="orders">
+        {% if funct==3 %}
+        <h1 id="head">Orders in Progress</h1>
+        {% if ordupdate %}
+        <div id="pop_up">Order Status has been Updated</div>
+        {%endif%}
+        {% if wrongid %}
+        <div id="pop_up">Unauthorized Order ID Entered</div>
+        {% endif %}
+        {% if ordinprog %}
 
+        <table align="center" border="1">
+
+            <thead>
+                <tr>
+                    <!-- order_ID,c_id,c_phoneNo,weight,size,type,speed,status,dist,bill,start,end -->
+                    <th>Order ID </th>
+                    <th>Customer ID </th>
+                    <th>Contact Number</th>
+                    <th>Weight</th>
+                    <th>Size in Vol</th>
+                    <th>Type</th>
+                    <th>Estimated Delivery Time</th>
+                    <th>Status</th>
+                    <th>Distance</th>
+                    <th>Bill Amount</th>
+                    <th>Pickup Location</th>
+                    <th>DropOff Location</th>
+                </tr>
+            </thead>
+            <tbody>
+
+                {% for row in cur %}
+                <tr>
+                    <td>{{row[0]}}</td>
+                    <td>{{row[1]}}</td>
+                    <td>{{row[2]}}</td>
+                    <td>{{row[3]}}</td>
+                    <td>{{row[4]}}</td>
+                    <td>{{row[5]}}</td>
+                    <td>{{row[6]}}</td>
+                    <td>{{row[7]}}</td>
+                    <td>{{row[8]}}</td>
+                    <td>{{row[9]}}</td>
+                    <td>{{row[10]}}</td>
+                    <td>{{row[11]}}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        <p>Update Order Status</p>
+        <form action="/prov_funct" method='POST'>
+            <input type="hidden" name="user_id" value="{{userid}}">
+            <input type="hidden" name="todo" value=9>
+            <label for="ordid">Enter OrderID:</label>
+            <input type="text" name="ordid" id="ordid">
+
+            <label for="status">Enter Updated Status:</label>
+            <input type="text" name="status" id="status">
+            <button>Update</button>
+
+        </form>
+
+        {%endif%}
+        {% if noordinprog %}
+        <p id="pop_up">Currently No Orders In Progress</p>
+        {%endif%}
+        {% endif %}
+    </div>
+
+
+    <div id="Completedorders">
+        {% if funct==4 %}
+        <h1 id="head">Previously Completed Orders</h1>
+        {% if ordercomp %}
+        <table align="center" border="1">
+
+            <thead>
+                <tr>
+                    <!-- select order_ID,c_id,c_phoneNo,weight,size,type,speed,status,dist,bill,start,end -->
+                    <th>Order ID </th>
+                    <th>Customer ID </th>
+                    <th>Contact Number</th>
+                    <th>Weight</th>
+                    <th>Size in Vol</th>
+                    <th>Type</th>
+                    <th>Delivery Time</th>
+
+                    <th>Distance</th>
+                    <th>Bill Amount</th>
+                    <th>Pickup Location</th>
+                    <th>DropOff Location</th>
+                </tr>
+            </thead>
+            <tbody>
+
+                {% for row in cur %}
+                <tr>
+                    <td>{{row[0]}}</td>
+                    <td>{{row[1]}}</td>
+                    <td>{{row[2]}}</td>
+                    <td>{{row[3]}}</td>
+                    <td>{{row[4]}}</td>
+                    <td>{{row[5]}}</td>
+                    <td>{{row[6]}}</td>
+                    
+                    <td>{{row[8]}}</td>
+                    <td>{{row[9]}}</td>
+                    <td>{{row[10]}}</td>
+                    <td>{{row[11]}}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+
+        {%endif%}
+        {% if noordercomp %}
+        <p id="pop_up">No orders Previously Completed</p>
+        {%endif%}
+        {% endif %}
+    </div>
 
 
 
