--- a/Backend/templates/Provider.html
+++ b/Backend/templates/Provider.html
@@ -48,6 +48,9 @@
             <input type="hidden" name="todo" value=4>
             <button>View completed Orders</button>
         </form>
+        <form action="/login" method='POST'>
+            <button>Logout</button>
+        </form>
         
     </div>
 </body>
