--- a/Backend/templates/Admin.html
+++ b/Backend/templates/Admin.html
@@ -46,6 +46,9 @@
             <input type="hidden" name="todo" value=3>
             <button class="button-container">View Employees</button>
         </form>
+        <form action="/login" method='POST'>
+            <button>Logout</button>
+        </form>
         
     </div>
 
