--- a/Backend/templates/Login.html
+++ b/Backend/templates/Login.html
@@ -38,7 +38,7 @@
         <br>
         {{form.submit()}}
     </form>
-    <div class="disclaimer">Table of user and passwords from the database</div>
+    <!-- <div class="disclaimer">Table of user and passwords from the database</div>
     <table align="center">
         <thead>
             <tr>
@@ -55,7 +55,7 @@
             </tr>
             {%endfor%}
         </tbody>
-    </table>
+    </table> -->
 </body>
 
 </html>
