Added All the CSS docs and linked them

--- a/Backend/templates/Admin.html
+++ b/Backend/templates/Admin.html
@@ -5,19 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Controls|Go-VYA</title>
-    <style>
-        #inline {
-            display: inline-block;
-        }
+    <link rel="stylesheet" href="{{ url_for('static', filename='/admin_styles.css') }}">
 
-        * {
-            text-align: center;
-        }
-
-        h1 {
-            text-decoration: underline;
-        }
-    </style>
 </head>
 
 <body>
