--- a/Backend/templates/Customer_register.html
+++ b/Backend/templates/Customer_register.html
@@ -5,35 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Customer Registeration|Go-VYA</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='/customer_register_styles.css') }}">
 </head>
-<style>
-    h1 {
-        text-align: center;
-        text-decoration: underline;
-    }
 
-    .container {
-        text-align: center;
-        /* Center aligning the text */
-    }
-
-    .content {
-        text-align: left;
-        /* Left-aligning the text within the container */
-        display: inline-block;
-
-    }
-
-    #pop_up {
-        font-weight: bold;
-        font-size: 1.2em;
-        padding: 10px;
-        background-color: #FFCCCC;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        margin-bottom: 20px;
-    }
-</style>
 
 <body>
     <h1>Customer Registeration</h1>
