--- a/Backend/templates/Login.html
+++ b/Backend/templates/Login.html
@@ -5,24 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login|Go-VYA</title>
-    <style>
-        /* Style to display buttons inline */
-        .button-container {
-            display: inline-block;
-        }
+    <link rel="stylesheet" href="{{ url_for('static', filename='/login_styles.css') }}">
 
-        #h1 {
-            font-size: large;
-        }
-
-        .disclaimer {
-            color: blue;
-        }
-
-        * {
-            text-align: center;
-        }
-    </style>
 </head>
 
 <body>
