--- a/Backend/templates/admin_funct.html
+++ b/Backend/templates/admin_funct.html
@@ -5,25 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Functions</title>
-    <style>
-        #text {
-            text-align: center;
-        }
+    <link rel="stylesheet" href="{{ url_for('static', filename='/admin_funct_styles.css') }}">
 
-        form {
-            text-align: center;
-        }
-
-        #pop_up {
-            font-weight: bold;
-            font-size: 1.2em;
-            padding: 10px;
-            background-color: #FFCCCC;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            margin-bottom: 20px;
-        }
-    </style>
 </head>
 
 <body>
