--- a/Backend/templates/Provider_register.html
+++ b/Backend/templates/Provider_register.html
@@ -5,34 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Provider Registeration|Go-VYA</title>
-    <style>
-        h1 {
-            text-align: center;
-            text-decoration: underline;
-        }
+    <link rel="stylesheet" href="{{ url_for('static', filename='/provider_register_styles.css') }}">
 
-        .container {
-            text-align: center;
-            /* Center aligning the text */
-        }
-
-        .content {
-            text-align: left;
-            /* Left-aligning the text within the container */
-            display: inline-block;
-
-        }
-
-        #pop_up {
-            font-weight: bold;
-            font-size: 1.2em;
-            padding: 10px;
-            background-color: #FFCCCC;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            margin-bottom: 20px;
-        }
-    </style>
 
 <body>
     <h1>Provider Registeration</h1>
