--- a/Backend/templates/register.html
+++ b/Backend/templates/register.html
@@ -5,15 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Registeration|Go-VYA</title>
-    <style>
-        /* Style to display buttons inline */
-        .button-container {
-            display: inline-block;
-        }
-        * {
-            text-align: center;
-        }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename='/register_styles.css') }}">
+
 
 </head>
 
