--- a/Backend/templates/unauthacc.html
+++ b/Backend/templates/unauthacc.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unauthorized Access</title>
-    <style>
-        * {
-            text-align: center;
-        }
-        h1{
-            text-decoration: underline;
-        }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename='/unauthacc_styles.css') }}">
 </head>
+
 <body>
     <h1>Unauthorized Access</h1>
     <form action="/login">
         <button>Try Logging in again?</button>
     </form>
 </body>
+
 </html>
