--- a/Backend/templates/user_selector.html
+++ b/Backend/templates/user_selector.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        * {
-            text-align: center;
-        }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename='/user_selector_styles.css') }}">
+
 </head>
+
 <body>
     {{Welcome}}
     <form action="/login">
         <button>Retry?</button>
     </form>
 </body>
+
 </html>
