--- a/Backend/templates/Customer_register.html
+++ b/Backend/templates/Customer_register.html
@@ -10,39 +10,29 @@
 
 
 <body>
-    <h1>Customer Registeration</h1>
-
+    <form action="/" class="button-container">
+        <button class="logo">GO-VYA</button>
+    </form>
     {% if Success %}
     <p id="pop_up">{{Success}}</p>
     {% endif %}
     <div class="container">
+        <div class="heading">
+            <h1>Customer Registeration</h1>
+        </div>
         <div class="content"><br>
-            <p>Enter Customer Details:</p>
-
             <form action="/cust_reg" method='POST'>
 
-                <label for="name">Enter Name:</label>
-                <input type="text" id="name" name="name" required><br><br>
+                <input placeholder="Name" type="text" id="name" name="name" required><br><br>
                 <!-- add function for checking if name in correct format -->
+                <input placeholder="Phone Number" type="text" id="pno" name="pno" required><br><br>
+                <input placeholder="Email Address" type="email" id="email" name="email" required><br><br>
+                <input placeholder="Home Address" type="text" id="home" name="home" required><br><br>
+                <input placeholder="Create Password" type="password" id="password" name="pass" required minlength="6" maxlength="16"><br><br>
+                <input placeholder="Confirm Password" type="password" id="confirm" name="conf" required minlength="6" maxlength="16"><br><br>
 
-
-                <label for="pno">Phone Number:</label>
-                <input type="text" id="pno" name="pno" required><br><br>
-
-                <label for="email">Email Address:</label>
-                <input type="email" id="email" name="email" required><br><br>
-
-                <label for="home">Enter Home Address:</label>
-                <input type="text" id="home" name="home" required><br><br>
-
-                <label for="password">Create passsword:</label>
-                <input type="password" id="password" name="pass" required minlength="6" maxlength="16"><br><br>
-
-                <label for="confirm">Confirm password:</label>
-                <input type="password" id="confirm" name="conf" required minlength="6" maxlength="16"><br><br>
-
-                <button>Submit</button>
-                <button type="reset">Reset</button>
+                <button class="submit-button">Submit</button>
+                <button type="reset" class="reset-button">Reset</button>
 
             </form>
         </div>
