Added Session controls

--- a/Backend/templates/Admin.html
+++ b/Backend/templates/Admin.html
@@ -16,26 +16,23 @@
     <p>Id:{{userid}}</p>
     <div id="inline">
         <form action="/admin_funct" method="POST">
-            <input type="hidden" name="user_id" value="{{ userid }}">
-            <input type="hidden" name="user_name" value="{{username}}">
+            
             <input type="hidden" name="todo" value=1>
             <button type="submit" class="button-container">Verify registeration requests</button>
         </form>
 
         <form action="/admin_funct" method="POST">
-            <input type="hidden" name="user_id" value="{{ userid }}">
-            <input type="hidden" name="user_name" value="{{username}}">
+            
             <input type="hidden" name="todo" value=2>
             <button type="submit" class="button-container">View Order Status</button>
         </form>
 
         <form action="/admin_funct" method="POST">
-            <input type="hidden" name="user_id" value="{{ userid }}">
-            <input type="hidden" name="user_name" value="{{username}}">
             <input type="hidden" name="todo" value=3>
             <button class="button-container">View Employees</button>
         </form>
         <form action="/login" method='POST'>
+            <input type="hidden" name="todo" value=99>
             <button>Logout</button>
         </form>
         
